docs/infrastructure/EKS/main/cluster_masters.tf
# cluster_masters.tf - this creates the kubernetes cluster masters

resource "aws_eks_cluster" "main" {
  name    = "${var.project_slug}-cluster"
  version = var.k8s_version

  role_arn = aws_iam_role.eks_master.arn

  vpc_config {
    security_group_ids      = [aws_security_group.eks_master.id]
    subnet_ids              = var.create_network_stack ? [aws_subnet.private1[0].id, aws_subnet.private2[0].id] : var.subnet_ids
    endpoint_private_access = true
    endpoint_public_access  = true
    public_access_cidrs     = ["0.0.0.0/0"]
  }

  # Encrypt secrets in etcd
  encryption_config {
    provider {
      key_arn = aws_kms_key.eks.arn
    }
    resources = ["secrets"]
  }

  # for more info see: https://docs.aws.amazon.com/eks/latest/userguide/control-plane-logs.html
  enabled_cluster_log_types = [
    "api",
    "audit",
    "authenticator",
    "controllerManager",
    "scheduler",
  ]

  depends_on = [
    aws_cloudwatch_log_group.eks,
    aws_iam_role.eks_master,
    aws_security_group.eks_master,
    aws_kms_key.eks
  ]

  tags = var.custom_tags
}

### security group
resource "aws_security_group" "eks_master" {
  name        = "${var.project_slug}-cluster-master"
  description = "${var.project_name} master SG"
  vpc_id      = var.create_network_stack ? aws_vpc.main[0].id : var.vpc_id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = merge(
    map("Name", "${var.project_name} cluster master"),
    var.custom_tags
  )
}

### cluster masters role
resource "aws_iam_role" "eks_master" {
  name               = "${var.project_slug}-master-role"
  assume_role_policy = data.aws_iam_policy_document.eks_master.json
  tags               = var.custom_tags
}

data "aws_iam_policy_document" "eks_master" {
  statement {
    principals {
      identifiers = ["eks.amazonaws.com"]
      type        = "Service"
    }
    actions = ["sts:AssumeRole"]
  }
}

### managed polices for EKS. See https://docs.aws.amazon.com/eks/latest/userguide/service_IAM_role.html
# Note: AmazonEKSServicePolicy is no longer required for clusters created after April 2020
resource "aws_iam_role_policy_attachment" "eks_cluster" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role       = aws_iam_role.eks_master.name
}

### KMS key for EKS encryption
resource "aws_kms_key" "eks" {
  description             = "EKS Secret Encryption Key"
  deletion_window_in_days = 7
  enable_key_rotation     = true

  tags = merge(
    map("Name", "${var.project_slug}-eks-encryption-key"),
    var.custom_tags
  )
}

resource "aws_kms_alias" "eks" {
  name          = "alias/${var.project_slug}-eks-encryption-key"
  target_key_id = aws_kms_key.eks.key_id
}

### cloudwatch control plane logs
resource "aws_cloudwatch_log_group" "eks" {
  name              = "/aws/eks/${var.project_slug}-cluster/cluster"
  retention_in_days = 7
  tags              = var.custom_tags
}
